!#3 Fix: urls html base

--- a/src/templates/_navbar.html
+++ b/src/templates/_navbar.html
@@ -1,7 +1,7 @@
 <div class="navbar-fixed">
   <nav>
     <div class="nav-wrapper">
-      <a href="{% url 'home_page' %}" class="brand-logo">{{ site.name }}</a>
+      <a href="{% url 'home_app:home' %}" class="brand-logo">{{ site.name }}</a>
       <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
 
       <ul class="right">
