--- a/src/templates/home/index.html
+++ b/src/templates/home/index.html
@@ -1,4 +1,5 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
+{% load static %}
 
 {% block head_title %} Home page {% endblock head_title %}
 
