fix: name fields (#3)

--- a/src/templates/home/login.html
+++ b/src/templates/home/login.html
@@ -8,7 +8,7 @@
   {% endif %}
 
   <h1 class="text text-center">Bienvenido</h1>
-  <input name="username" class="form-control" placeholder="Nombre de usuario o Correo Electrónico">
+  <input name="email" class="form-control" placeholder="Correo Electrónico">
   <input type="password" name="password" class="form-control" placeholder="Contraseña">
   <button class="btn btn-brand dg-submit-user">Ingresar</button>
 </form>
