fix: form signup (#3)

--- a/src/templates/home/signup.html
+++ b/src/templates/home/signup.html
@@ -9,17 +9,16 @@
         <h1>Registro nueva cuenta</h1>
         <div class="divider"></div>
 
-        <form method="post" action="">
+        <form action='{% url 'home_app:signup' %}' method="POST">
           {% csrf_token %}
 
-<div class="row">
-<div class="input-field col s12">
-  <input id="id_username" class="validate " type="text" value="" name="username" required>
-  <label for="id_username">Nombre de usuario<span class="input-required">*</span></label>
+<!-- <div class="row"> -->
+<!--   <div class="input-field col s12"> -->
+<!--     <input id="id_username" class="validate " type="text" value="" name="username" required> -->
+<!--     <label for="id_username">Nombre de usuario<span class="input-required">*</span></label> -->
 
-</div>
-
-  </div>
+<!--   </div> -->
+<!-- </div> -->
 
 <div class="row">
 <div class="input-field col s12">
@@ -47,8 +46,8 @@
   </div>
      <div class="row">
 <div class="input-field col s12">
-  <input id="id_password2" class="validate " type="password" value="" name="password2" required>
-  <label for="id_password2">Repetir contraseña<span class="input-required">*</span></label>
+  <input id="id_password1" class="validate " type="password" value="" name="password1" required>
+  <label for="id_password1">Repetir contraseña<span class="input-required">*</span></label>
 </div>
   </div>
 
