fix: render show login (#3)

--- a/src/templates/home/login.html
+++ b/src/templates/home/login.html
@@ -1,18 +1,22 @@
-<h1>Login</h1>
+{% extends 'base.html' %}
 
+{% block content %}
+
+<h1>Login</h1>
 <form action='{% url 'home_app:login' %}' method="POST">
   {% csrf_token %}
-
-  {% if next %}
-  <input type='hidden' value='{{next}}' name='next'>
-  {% endif %}
+  {{ form.non_field_errors }}
 
   <h1 class="text text-center">Bienvenido</h1>
   <input name="email" class="form-control" placeholder="Correo Electrónico">
+  {{ form.email.errors }}
   <input type="password" name="password" class="form-control" placeholder="Contraseña">
+  {{ form.password.errors }}
   <button class="btn btn-brand dg-submit-user">Ingresar</button>
 </form>
 
 <hr>
 <a href={% url 'home_app:home' %}>Home</a>
 <hr>
+
+{% endblock content %}
