chore: implement field user name (#3)

--- a/src/templates/home/signup.html
+++ b/src/templates/home/signup.html
@@ -12,13 +12,13 @@
         <form action='{% url 'home_app:signup' %}' method="POST">
           {% csrf_token %}
 
-<!-- <div class="row"> -->
-<!--   <div class="input-field col s12"> -->
-<!--     <input id="id_username" class="validate " type="text" value="" name="username" required> -->
-<!--     <label for="id_username">Nombre de usuario<span class="input-required">*</span></label> -->
+<div class="row">
+  <div class="input-field col s12">
+    <input id="id_username" class="validate " type="text" value="" name="username" required>
+    <label for="id_username">Nombre de usuario<span class="input-required">*</span></label>
 
-<!--   </div> -->
-<!-- </div> -->
+  </div>
+</div>
 
 <div class="row">
 <div class="input-field col s12">
