--- a/src/templates/home/login.html
+++ b/src/templates/home/login.html
@@ -8,8 +8,8 @@
   {{ form.non_field_errors }}
 
   <h1 class="text text-center">Bienvenido</h1>
-  <input name="email" class="form-control" placeholder="Correo Electrónico">
-  {{ form.email.errors }}
+  <input name="username" class="form-control" placeholder="username or Correo Electrónico">
+  {{ form.username.errors }}
   <input type="password" name="password" class="form-control" placeholder="Contraseña">
   {{ form.password.errors }}
   <button class="btn btn-brand dg-submit-user">Ingresar</button>
