--- a/src/templates/home/home.html
+++ b/src/templates/home/home.html
@@ -1,21 +1,305 @@
-{% extends "base.html" %}
-{% load static %}
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <title>Boooya - Blog - Main</title>
 
-{% block head_title %} Home page {% endblock head_title %}
+        <!-- META SECTION -->
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
-{% block content %}
-  <div class="row">
-    <div class="col s12">
-      {% if user.is_authenticated %}
-          <p>  Bienvenido(a), {{ user.get_username }}. Gracias por usar nuestros servicios.</p>
-          <p>  email: {{ user.email }}. </p>
+        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+        <link rel="icon" href="favicon.ico" type="image/x-icon">
+        <!-- END META SECTION -->
+        <!-- CSS INCLUDE -->
+        <link rel="stylesheet" href="css/styles.css">
+        <!-- EOF CSS INCLUDE -->
+    </head>
+    <body>
 
-        <p><a class="btn waves-effect red" href="{% url 'home_app:logout' %}">logout</a></p>
-      {% else %}
-          <p> Bienvenido(a), Visitante. Debes registrarse o ingresar para usar nuestros servicios.</p>
+        <!-- APP WRAPPER -->
+        <div class="app">
+
+            <!-- START APP CONTAINER -->
+            <div class="app-container">
+                <!-- START APP HEADER -->
+                <div class="app-header">
+                    <div class="container container-boxed">
+                        <ul class="app-header-buttons visible-mobile">
+                            <li><a href="#" class="btn btn-link btn-icon" data-navigation-horizontal-toggle="true"><span class="icon-menu"></span></a></li>
+                        </ul>
+                        <a href="index.html" class="app-header-logo app-header-logo-light app-header-logo-condensed">Project</a>
+
+                        {% if user.is_authenticated %}
+                        <ul class="app-header-buttons pull-right">
+                            <li>
+                              <div class="contact contact-rounded contact-bordered contact-lg contact-ps-controls">
+                                    <img src="assets/images/users/user_1.jpg" alt="{{ user.get_username }}">
+                                    <div class="contact-container">
+                                        <a href="#">{{ user.get_username }}</a>
+                                        <span>Administrator</span>
+                                    </div>
+                                    <div class="contact-controls">
+                                        <div class="dropdown">
+                                            <button type="button" class="btn btn-default btn-icon" data-toggle="dropdown"><span class="icon-cog"></span></button>
+                                            <ul class="dropdown-menu dropdown-left">
+                                                <li><a href="#"><span class="icon-cog"></span> Settings</a></li>
+                                                <li><a href="#"><span class="icon-envelope"></span> Messages <span class="label label-danger pull-right">+24</span></a></li>
+                                                <li><a href="#"><span class="icon-users"></span> Contacts <span class="label label-default pull-right">76</span></a></li>
+                                                <li class="divider"></li>
+                                                <li><a href="{% url 'home_app:logout' %}"><span class="icon-exit-right"></span> Log Out</a></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                            </li>
+                        </ul>
+                      {% else %}
         <p><a class="btn waves-effect green" href="{% url 'home_app:login' %}">login</a></p>
         <p><a class="btn waves-effect pink" href="{% url 'home_app:signup' %}">signup</a></p>
-      {% endif %}
-    </div>
-  </div>
-{% endblock content %}
+                      {% endif %}
+                    </div>
+                </div>
+                <!-- END APP HEADER  -->
+
+                <!-- START APP CONTENT -->
+                <div class="app-content">
+                    <div class="app-navigation-horizontal margin-bottom-15">
+                        <div class="container container-boxed">
+                            <nav>
+                                <ul>
+                                    <li>
+                                        <a href="#"><span class="icon-earth"></span> Main</a>
+                                        <ul>
+                                            <li><a href="pages-blog-main.html">Variant 1</a></li>
+                                            <li><a href="pages-blog-main-2.html">Variant 2</a></li>
+                                        </ul>
+                                    </li>
+                                    <li>
+                                        <a href="#"><span class="icon-sync"></span> Category</a>
+                                        <ul>
+                                            <li><a href="pages-blog-category.html">Right Sidebar</a></li>
+                                            <li><a href="pages-blog-category-2.html">Left Sidebar</a></li>
+                                        </ul>
+                                    </li>
+                                    <li>
+                                        <a href="#"><span class="icon-cog"></span> Single</a>
+                                        <ul>
+                                            <li><a href="pages-blog-single.html">Variant 1</a></li>
+                                        </ul>
+                                    </li>
+                                </ul>
+                            </nav>
+                        </div>
+                    </div>
+
+                    <!-- START PAGE CONTAINER -->
+                    <div class="container container-boxed">
+
+                        <div class="row app-blog-important-block">
+                            <div class="col-md-8">
+                                <div class="tile-basic">
+                                    <div class="tile-image">
+                                        <a href="#"><img src="assets/images/preview/img-2.jpg" alt=""></a>
+                                        <div class="tile-image-container">
+                                            <span class="label label-success">Business</span>
+                                        </div>
+                                        <div class="tile-image-title">
+                                            <a href="#" class="tile-title">Business news title goes here</a>
+                                            <p>Short description of this news goes here.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="tile-basic">
+                                    <div class="tile-image">
+                                        <a href="#"><img src="assets/images/preview/img-3.jpg" alt=""></a>
+                                        <div class="tile-image-container">
+                                            <span class="label label-warning">Sport</span>
+                                        </div>
+                                        <div class="tile-image-title">
+                                            <a href="#" class="tile-title">Sport news title goes here</a>
+                                            <p>Short description of this news goes here.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="tile-basic">
+                                    <div class="tile-image">
+                                        <img src="assets/images/preview/img-4.jpg" alt="">
+                                        <div class="tile-image-container">
+                                            <span class="label label-danger">Economics</span>
+                                        </div>
+                                        <div class="tile-image-title">
+                                            <a href="#" class="tile-title">Econimics news title goes here</a>
+                                            <p>Short description of this news goes here.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="app-blog-banner">
+                            <img src="assets/banners/default_728x90.jpg" alt="banner">
+                        </div>
+
+                        <h4 class="text-uppercase text-bold text-lg heading-line-below margin-bottom-20">Business News</h4>
+
+                        <div class="row app-blog-blocks">
+                            <div class="col-md-4">
+                                <div class="tile-basic">
+                                    <div class="tile-image">
+                                        <a href="#"><img src="assets/images/news/business_1.jpg" alt=""></a>
+                                    </div>
+                                    <div class="tile-content">
+                                        <a href="#" class="tile-title">Aliquam tempor ligula</a>
+                                        <span class="tile-subtitle">22/05/2016 - 08 comments - John Doe</span>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In placerat velit quis velit tincidunt, ac feugiat lectus mattis.</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="tile-basic">
+                                    <div class="tile-image">
+                                        <a href="#"><img src="assets/images/news/business_2.jpg" alt=""></a>
+                                    </div>
+                                    <div class="tile-content">
+                                        <a href="#" class="tile-title">Pellentesque iaculis varius</a>
+                                        <span class="tile-subtitle">22/05/2016 - 08 comments - John Doe</span>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In placerat velit quis velit tincidunt, ac feugiat lectus mattis.</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="tile-basic">
+                                    <div class="tile-image">
+                                        <a href="#"><img src="assets/images/news/business_3.jpg" alt=""></a>
+                                    </div>
+                                    <div class="tile-content">
+                                        <a href="#" class="tile-title">Nulla tempus malesuada turpis</a>
+                                        <span class="tile-subtitle">22/05/2016 - 08 comments - John Doe</span>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In placerat velit quis velit tincidunt, ac feugiat lectus mattis.</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <h4 class="text-uppercase text-bold text-lg heading-line-below margin-bottom-20">Sport News</h4>
+
+                        <div class="row app-blog-blocks">
+                            <div class="col-md-4">
+                                <div class="tile-basic">
+                                    <div class="tile-image">
+                                        <a href="#"><img src="assets/images/news/sport_1.jpg" alt=""></a>
+                                    </div>
+                                    <div class="tile-content">
+                                        <a href="#" class="tile-title">Etiam iaculis justo scelerisque</a>
+                                        <span class="tile-subtitle">22/05/2016 - 08 comments - John Doe</span>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In placerat velit quis velit tincidunt, ac feugiat lectus mattis.</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="tile-basic">
+                                    <div class="tile-image">
+                                        <a href="#"><img src="assets/images/news/sport_2.jpg" alt=""></a>
+                                    </div>
+                                    <div class="tile-content">
+                                        <a href="#" class="tile-title">Aliquam semper lectus tellus</a>
+                                        <span class="tile-subtitle">22/05/2016 - 08 comments - John Doe</span>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In placerat velit quis velit tincidunt, ac feugiat lectus mattis.</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="tile-basic">
+                                    <div class="tile-image">
+                                        <a href="#"><img src="assets/images/news/sport_3.jpg" alt=""></a>
+                                    </div>
+                                    <div class="tile-content">
+                                        <a href="#" class="tile-title">Maecenas tristique consectetur</a>
+                                        <span class="tile-subtitle">22/05/2016 - 08 comments - John Doe</span>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In placerat velit quis velit tincidunt, ac feugiat lectus mattis.</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <h4 class="text-uppercase text-bold text-lg heading-line-below margin-bottom-20">City Life News</h4>
+
+                        <div class="row app-blog-blocks">
+                            <div class="col-md-4">
+                                <div class="tile-basic">
+                                    <div class="tile-image">
+                                        <a href="#"><img src="assets/images/news/city_1.jpg" alt=""></a>
+                                    </div>
+                                    <div class="tile-content">
+                                        <a href="#" class="tile-title">Suspendisse consectetur</a>
+                                        <span class="tile-subtitle">22/05/2016 - 08 comments - John Doe</span>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In placerat velit quis velit tincidunt, ac feugiat lectus mattis.</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="tile-basic">
+                                    <div class="tile-image">
+                                        <a href="#"><img src="assets/images/news/city_2.jpg" alt=""></a>
+                                    </div>
+                                    <div class="tile-content">
+                                        <a href="#" class="tile-title">Aliquam auctor lobortis</a>
+                                        <span class="tile-subtitle">22/05/2016 - 08 comments - John Doe</span>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In placerat velit quis velit tincidunt, ac feugiat lectus mattis.</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="tile-basic">
+                                    <div class="tile-image">
+                                        <a href="#"><img src="assets/images/news/city_3.jpg" alt=""></a>
+                                    </div>
+                                    <div class="tile-content">
+                                        <a href="#" class="tile-title">Curabitur tortor nisi</a>
+                                        <span class="tile-subtitle">22/05/2016 - 08 comments - John Doe</span>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In placerat velit quis velit tincidunt, ac feugiat lectus mattis.</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                    <!-- END PAGE CONTAINER -->
+
+                </div>
+                <!-- END APP CONTENT -->
+
+            </div>
+            <!-- END APP CONTAINER -->
+
+            <!-- START APP FOOTER -->
+            <div class="app-footer app-footer-default" id="footer">
+
+                <div class="container container-boxed">
+                    <div class="app-footer-line">
+                        <div class="copyright wide text-center">&copy; 2016 Boooya. All right reserved in the Ukraine and other countries.</div>
+                    </div>
+                </div>
+
+            </div>
+            <!-- END APP FOOTER -->
+        </div>
+        <!-- END APP WRAPPER -->
+
+        <!-- IMPORTANT SCRIPTS -->
+        <script type="text/javascript" src="js/vendor/jquery/jquery.min.js"></script>
+        <script type="text/javascript" src="js/vendor/jquery/jquery-ui.min.js"></script>
+        <script type="text/javascript" src="js/vendor/bootstrap/bootstrap.min.js"></script>
+        <script type="text/javascript" src="js/vendor/moment/moment.min.js"></script>
+        <script type="text/javascript" src="js/vendor/customscrollbar/jquery.mCustomScrollbar.min.js"></script>
+        <!-- END IMPORTANT SCRIPTS -->
+        <!-- APP SCRIPTS -->
+        <script type="text/javascript" src="js/app.js"></script>
+        <script type="text/javascript" src="js/app_plugins.js"></script>
+        <script type="text/javascript" src="js/app_demo.js"></script>
+        <!-- END APP SCRIPTS -->
+    </body>
+</html>
