chore: implement form sign up (#8)

--- a/src/templates/home/signup.html
+++ b/src/templates/home/signup.html
@@ -1,8 +1,12 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Boooya - Sign In</title>
-
+        <title>
+        {% block title %}
+        Sales Retail
+        {% endblock title %}
+        </title>
         <!-- META SECTION -->
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,7 +16,7 @@
         <link rel="icon" href="favicon.ico" type="image/x-icon">
         <!-- END META SECTION -->
         <!-- CSS INCLUDE -->
-        <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href="{% static "css/styles.css" %}">
         <!-- EOF CSS INCLUDE -->
     </head>
     <body>
@@ -67,18 +71,17 @@
 
         </div>
         <!-- END APP WRAPPER -->
-
         <!-- IMPORTANT SCRIPTS -->
-        <script type="text/javascript" src="js/vendor/jquery/jquery.min.js"></script>
-        <script type="text/javascript" src="js/vendor/jquery/jquery-ui.min.js"></script>
-        <script type="text/javascript" src="js/vendor/bootstrap/bootstrap.min.js"></script>
-        <script type="text/javascript" src="js/vendor/moment/moment.min.js"></script>
-        <script type="text/javascript" src="js/vendor/customscrollbar/jquery.mCustomScrollbar.min.js"></script>
+        <script type="text/javascript" src="{% static "js/vendor/jquery/jquery.min.js" %}"></script>
+        <script type="text/javascript" src="{% static "js/vendor/jquery/jquery-ui.min.js" %}"></script>
+        <script type="text/javascript" src="{% static "js/vendor/bootstrap/bootstrap.min.js" %}"></script>
+        <script type="text/javascript" src="{% static "js/vendor/moment/moment.min.js" %}"></script>
+        <script type="text/javascript" src="{% static "js/vendor/customscrollbar/jquery.mCustomScrollbar.min.js" %}"></script>
         <!-- END IMPORTANT SCRIPTS -->
         <!-- APP SCRIPTS -->
-        <script type="text/javascript" src="js/app.js"></script>
-        <script type="text/javascript" src="js/app_plugins.js"></script>
-        <script type="text/javascript" src="js/app_demo.js"></script>
+        <script type="text/javascript" src="{% static "js/app.js" %}"></script>
+        <script type="text/javascript" src="{% static "js/app_plugins.js" %}"></script>
+        <script type="text/javascript" src="{% static "js/app_demo.js" %}"></script>
         <!-- END APP SCRIPTS -->
     </body>
 </html>
